tests/import_feature_extras_bad.stderr
tests/import_feature_extras_bad.sl:0:38: error: feature imports must be path-only (no alias or symbol list)
