tests/import_feature_extras_bad.sl
import "slang/feature/optional" as opt

fn main() {}
